<resources>
    <string name="app_name">BookKeeper</string>
    <string name="welcome_logo">welcome logo</string>
    <string name="book_keeper">СЧЕТОВОД</string>
    <string name="games_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа.
    Необходимо, чтобы сумма чисел из даух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число </string>
    <string name="understand">Понятно</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="test">Тестовый</string>
    <string name="easy">Легкий</string>
    <string name="normal">Средний</string>
    <string name="hard">Тяжелый</string>
    <string name="question_mark">"?"</string>
    <string name="progress_answer">правильных ответов %s (минимум %s)</string>
    <string name="game_over">Game Over</string>
    <string name="required_answers">Необходимое количество правильных ответов: %s</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="button_retry">Попробовать снова</string>
</resources>